# src/controllers/routes.ts
@@ -388,18 +388,44 @@ async function getPathUrlBooks(req: Request, res: Response) {
 
 async function getMostViewedBooks(req: Request, res: Response) {
   try {
-    const result = await booksModel.find({}, 'title pathUrl').sort({ views: -1 }).limit(10);
+    const { detail } = req.query;
+
+    if (detail === 'summary') {
+      const result = await booksModel.find({}, ' title pathUrl views').sort({ views: -1 }).limit(10);
+
+      return res.status(200).json(result);
+    } else if (detail === 'full') {
+      const result = await booksModel.find({}, 'title category language authors pathUrl image').sort({ views: -1 }).limit(10);
+
+      return res.status(200).json(result);
+    } else {
+      return res.status(400).json({ error: { message: 'Parámetro detail inválido' } });
+    }
 
     // if (!result) {
     //   return res.status(404).json({ info: { message: 'No se encuentra o no existe' } });
     // }
 
-    return res.status(200).json(result);
   } catch (err) {
     console.log(err);
     return res.status(500).json({ error: { message: 'Error en el servidor' } });
   }
 }
+
+// async function getMostViewedBooksDetails(req: Request, res: Response) {
+//   try {
+//     const result = await booksModel.find({}, ' title category language authors pathUrl image views').sort({ views: -1 }).limit(10);
+
+//     if (!result) {
+//       return res.status(404).json({ info: { message: 'No se encuentra o no existe' } });
+//     }
+
+//     return res.status(200).json(result);
+//   } catch (err) {
+//     console.log(err);
+//     return res.status(500).json({ error: { message: 'Error en el servidor' } });
+//   }
+// }
 
 async function putBooks(req: Request, res: Response) {
   try {
